# openlifu-test-app

./: .gitignore  OpenLIFU-TestApp.spec  README.md  build.bat  build.py  inspect_png.py  lifu_connector.py  lifu_connector_constants.py  lifu_connector_hv.py  lifu_connector_solution.py  lifu_connector_tx.py  main.py  main.qml  openwater.spec  pyproject.toml  requirements.txt
.github/workflows/: release-build.yml
components/: IconWindowButton.qml  SidebarMenu.qml  WindowMenu.qml
pages/: Console.qml  Demo.qml  Settings.qml  Testing.qml  Transmitter.qml
preset_solutions/: .gitkeep
preset_templates/: emi_test_1x.json  emi_test_1x155.json  emi_test_1x400.json  emi_test_2x.json  emi_test_2x155.json  emi_test_2x400.json
scripts/: generate_ultrasound_plot.py  test_reports.py
