[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openlifu-test-app"
version = "0.1.0"
description = "OpenLIFU Test Application - Focused Ultrasound Control Interface"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "OpenLIFU Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.7.0",
    "qasync>=0.25.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "requests>=2.28.0",
    "pyserial>=3.5",
    "soundfile>=0.12.0",
    "sounddevice>=0.4.6",
    "openpyxl"
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=5.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/OpenwaterHealth/OpenLIFU"
Documentation = "https://openlifu.readthedocs.io"
Repository = "https://github.com/OpenwaterHealth/OpenLIFU"
Issues = "https://github.com/OpenwaterHealth/OpenLIFU/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "build*", "dist*", "*.egg-info*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true